--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -19,5 +19,6 @@
 </mat-toolbar>
 <mat-menu #menu="matMenu">
   <button mat-menu-item>{{'menu-settings' | translate}}</button>
+  <button mat-menu-item routerLink="/admin">{{'menu-admin' | translate}}</button>
   <button mat-menu-item>{{'menu-logout' | translate}}</button>
 </mat-menu>
