Make abstractFormComponent, start creating partyForm

--- a/src/app/modules/party/forms/politician-form/politician-form.component.html
+++ b/src/app/modules/party/forms/politician-form/politician-form.component.html
@@ -1,4 +1,4 @@
-<form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit()">
+<form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit(politicianForm)">
   <mat-form-field class="span-6" appearance="outline">
     <mat-label>{{'politician-name' | translate}}</mat-label>
     <input matInput formControlName="fullName">
