--- a/src/app/modules/party/page/add-party/add-party.component.html
+++ b/src/app/modules/party/page/add-party/add-party.component.html
@@ -1,1 +1,5 @@
-<p>add-party works!</p>
+<section class="container">
+  <div class="container__content">
+    <app-party-form></app-party-form>
+  </div>
+</section>
