--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -16,7 +16,7 @@
               {{'edit-party' | translate}}
             </button>
             <button [routerLink]="['/political-party', party.id, 'add-politician']" mat-raised-button color="primary" class="button-add">
-              {{'add-politician' | translate}}
+              {{'politician-add' | translate}}
               <mat-icon>add</mat-icon>
             </button>
           </div>
