--- a/src/app/modules/party/page/add-party/add-party.component.html
+++ b/src/app/modules/party/page/add-party/add-party.component.html
@@ -1,5 +1,5 @@
 <section class="container">
   <div class="container__content">
-    <app-party-form (submitEvent)="onSubmit($event)"></app-party-form>
+    <app-party-form (submitEvent)="onSubmit($event)" (cancelEvent)="navigateBack()"></app-party-form>
   </div>
 </section>
