--- a/src/app/modules/party/forms/politician-form/politician-form.component.html
+++ b/src/app/modules/party/forms/politician-form/politician-form.component.html
@@ -1,4 +1,4 @@
-<form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit()">
+<form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit(politicianForm)">
   <mat-form-field class="span-6" appearance="outline">
     <mat-label>{{'politician-name' | translate}}</mat-label>
     <input matInput formControlName="fullName">
@@ -33,8 +33,9 @@
     <button (click)="cancel()" type="button" mat-raised-button class="button-add">
       {{'back' | translate}}
     </button>
+    <!-- TODO dont disable -->
     <button type="submit" mat-raised-button color="primary" class="button-add" [disabled]="!politicianForm.valid">
-      {{'create' | translate}}
+      {{politician ? ('update' | translate) : ('create' | translate)}}
     </button>
   </div>
 </form>
