--- a/src/app/modules/party/page/edit-party/edit-party.component.html
+++ b/src/app/modules/party/page/edit-party/edit-party.component.html
@@ -1,5 +1,7 @@
 <section class="container">
   <div class="container__content">
-    <app-party-form *ngIf="(politicalParty$ | async) as politicalParty" [party]="politicalParty" (submitEvent)="onSubmit($event)" (cancelEvent)="navigateBack(politicalParty.id!)"></app-party-form>
+    <ng-container *ngIf="(politicalParty$ | async) as politicalParty">
+      <app-party-form *ngIf="politicalParty.id" [party]="politicalParty" (submitEvent)="onSubmit($event)" (cancelEvent)="navigateBack(politicalParty.id!)"></app-party-form>
+    </ng-container>
   </div>
 </section>
