--- a/src/app/modules/home/page/home/news-detail/news-detail.component.scss
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.scss
@@ -24,15 +24,15 @@
         align-self: center;
         justify-self: center;
         font-size: 3.5rem;
-        letter-spacing: .1rem;
-        line-height: 4rem ;
+        letter-spacing: 0.1rem;
+        line-height: 4rem;
         margin: 1rem 0;
         color: #000;
       }
 
       &__date {
         text-align: right;
-        margin: .5rem;
+        margin: 0.5rem;
         font-size: 1.5rem;
         color: #000;
       }
