--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,4 +7,4 @@ $bp-medium: 62.5em; // 1000px
 $bp-large: 75em; // 1200px
 $bp-xlarge: 103.125em; //1650px
 
-$main-color: #2979FF;
+$main-color: #2979ff;
