--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -7,7 +7,7 @@
   font-size: 1.5rem;
 
   &__logo-container {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
     width: 4rem;
     height: 3rem;
 
@@ -20,7 +20,6 @@
 }
 
 .navitem {
-
   span {
     font-weight: 400;
     font-size: 1.5rem;
