--- a/src/app/modules/home/page/home/news/news.component.scss
+++ b/src/app/modules/home/page/home/news/news.component.scss
@@ -1,55 +1,55 @@
 .news {
-    position: relative;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  transition: box-shadow 0.1s;
+
+  @media (hover: hover) {
+    &:hover {
+      box-shadow: 0px 0px 34px -7px rgba(10, 10, 10, 1);
+      outline: 3px solid rgb(41, 121, 255);
+    }
+  }
+
+  img {
+    object-fit: cover;
     width: 100%;
-    height: 100%;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-    transition: box-shadow .1s;
+    height: 30rem;
+    display: block;
+    transition: all 0.5s;
+  }
 
+  &__text {
+    position: absolute;
+    bottom: 0;
+    padding: 1.5rem 1rem;
+    color: #fff;
+    background-color: rgba(29, 28, 28, 0.833);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2.5rem;
+    gap: 1.5rem 0;
+    align-items: center;
 
-
-    @media (hover: hover) {
-        &:hover {
-            box-shadow: 0px 0px 34px -7px rgba(10,10,10,1);
-            outline: 3px solid rgb(41, 121, 255);
-        }
+    h3 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 0.1rem;
+      margin: 0;
+      padding: 0;
     }
 
-    img {
-        object-fit: cover;
-        width: 100%;
-        height: 30rem;
-        display: block;
-        transition: all .5s;
+    &__content {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-size: 1.2rem;
+      text-align: justify;
     }
-
-    &__text {
-        position: absolute;
-        bottom: 0;
-        padding: 1.5rem 1rem;
-        color: #fff;
-        background-color: rgba(29, 28, 28, 0.833);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 2.5rem;
-        gap: 1.5rem 0;
-        align-items: center;
-
-        h3 {
-            font-size: 1.5rem;
-            font-weight: bold;
-            letter-spacing: .1rem;
-            margin: 0;
-            padding: 0;
-        }
-
-        &__content {
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            font-size: 1.2rem;
-            text-align: justify;
-        }
-    }
+  }
 }
