--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -1,20 +1,37 @@
 <ng-container *ngIf="politician">
   <mat-card appearance="outlined" class="politician-card mat-elevation-z2">
-    <app-admin-quick-menu-actions (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
+    <app-admin-quick-menu-actions
+      (actionClickEvt)="handleActionEvent($event)"
+    ></app-admin-quick-menu-actions>
     <mat-card-header>
-      <mat-card-title>{{politician.fullname}}</mat-card-title>
-      <mat-card-subtitle>{{politician.birthDate | dateFormatter}}</mat-card-subtitle>
+      <mat-card-title>{{ politician.fullname }}</mat-card-title>
+      <mat-card-subtitle>{{ politician.birthDate | dateFormatter }}</mat-card-subtitle>
     </mat-card-header>
-    <img class="politician-card__image" mat-card-image src="assets/man-user-svgrepo-com.svg">
+    <img class="politician-card__image" mat-card-image src="assets/man-user-svgrepo-com.svg" />
     <mat-card-content class="politician-card__media">
       <a *ngIf="politician.facebookUrl" [href]="politician.facebookUrl" target="_blank">
-        <img class="mat-elevation-z4" src="assets/icons/facebook.svg" aria-label="redirect to facebook profile of politic" alt="redirect to facebook profile of politic">
+        <img
+          class="mat-elevation-z4"
+          src="assets/icons/facebook.svg"
+          aria-label="redirect to facebook profile of politic"
+          alt="redirect to facebook profile of politic"
+        />
       </a>
       <a *ngIf="politician.instagramUrl" [href]="politician.instagramUrl" target="_blank">
-        <img class="mat-elevation-z4" src="assets/icons/instagram.svg" aria-label="redirect to instagram profile of politic" alt="redirect to instagram profile of politic">
+        <img
+          class="mat-elevation-z4"
+          src="assets/icons/instagram.svg"
+          aria-label="redirect to instagram profile of politic"
+          alt="redirect to instagram profile of politic"
+        />
       </a>
       <a *ngIf="politician.twitterUrl" [href]="politician.twitterUrl" target="_blank">
-        <img class="mat-elevation-z4" src="assets/icons/twitter.svg" aria-label="redirect to twitter profile of politic" alt="redirect to twitter profile of politic">
+        <img
+          class="mat-elevation-z4"
+          src="assets/icons/twitter.svg"
+          aria-label="redirect to twitter profile of politic"
+          alt="redirect to twitter profile of politic"
+        />
       </a>
     </mat-card-content>
   </mat-card>
