--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -15,7 +15,7 @@
 
     img {
       width: 3rem;
-      transition: all .5s;
+      transition: all 0.5s;
       border-radius: 25%;
 
       &:hover {
