--- a/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
+++ b/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
@@ -1,13 +1,19 @@
 <div class="wrapper" *ngIf="menuActions">
-    <button class="buttonek" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
+  <button
+    class="buttonek"
+    mat-icon-button
+    (click)="$event.stopPropagation()"
+    [matMenuTriggerFor]="menu"
+    aria-label="Example icon-button with a menu"
+  >
+    <mat-icon>more_vert</mat-icon>
+  </button>
 </div>
 <mat-menu #menu="matMenu" xPosition="after">
   <ng-container *ngFor="let action of menuActions">
     <button mat-menu-item (click)="onClick(action)">
-      <mat-icon color="primary">{{action.icon}}</mat-icon>
-      <span>{{action.label | translate}}</span>
+      <mat-icon color="primary">{{ action.icon }}</mat-icon>
+      <span>{{ action.label | translate }}</span>
     </button>
   </ng-container>
 </mat-menu>
