Finish eslint setup

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -5,8 +5,7 @@
       onclick="this.blur()"
       mat-icon-button
       class="example-icon"
-      aria-label="Example icon-button with menu icon"
-    >
+      aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
     <a class="navbar__politi" routerLink="'/home'">Politi.cz</a>
