--- a/src/app/modules/party/page/add-party/add-party.component.html
+++ b/src/app/modules/party/page/add-party/add-party.component.html
@@ -2,7 +2,6 @@
   <div class="container__content">
     <app-party-form
       (submitEvent)="onSubmit($event)"
-      (cancelEvent)="navigateBack()"
-    ></app-party-form>
+      (cancelEvent)="navigateBack()"></app-party-form>
   </div>
 </section>
