--- a/src/app/modules/party/page/add-politician/add-politician.component.html
+++ b/src/app/modules/party/page/add-politician/add-politician.component.html
@@ -3,7 +3,6 @@
     <h1>{{ 'politician-new' | translate }}</h1>
     <app-politician-form
       (submitEvent)="onSubmit($event)"
-      (cancelEvent)="navigateBack()"
-    ></app-politician-form>
+      (cancelEvent)="navigateBack()"></app-politician-form>
   </div>
 </section>
