--- a/src/app/modules/party/page/edit-party/edit-party.component.html
+++ b/src/app/modules/party/page/edit-party/edit-party.component.html
@@ -5,8 +5,7 @@
         *ngIf="politicalParty.id"
         [party]="politicalParty"
         (submitEvent)="onSubmit($event)"
-        (cancelEvent)="navigateBack(politicalParty.id!)"
-      ></app-party-form>
+        (cancelEvent)="navigateBack(politicalParty.id!)"></app-party-form>
     </ng-container>
   </div>
 </section>
