--- a/src/app/modules/party/page/edit-politician/edit-politician.component.html
+++ b/src/app/modules/party/page/edit-politician/edit-politician.component.html
@@ -5,7 +5,6 @@
       *ngIf="(politician$ | async)! as politician"
       [politician]="politician"
       (cancelEvent)="navigateBack()"
-      (submitEvent)="onSubmit($event)"
-    ></app-politician-form>
+      (submitEvent)="onSubmit($event)"></app-politician-form>
   </div>
 </section>
