--- a/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
+++ b/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
@@ -4,8 +4,7 @@
     mat-icon-button
     (click)="$event.stopPropagation()"
     [matMenuTriggerFor]="menu"
-    aria-label="Example icon-button with a menu"
-  >
+    aria-label="Example icon-button with a menu">
     <mat-icon>more_vert</mat-icon>
   </button>
 </div>
