--- a/src/app/shared/component/admin-section/admin-section.component.html
+++ b/src/app/shared/component/admin-section/admin-section.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <div class="container__content">
-    <button mat-raised-button color="primary" routerLink="/political-party/add">{{
-      'admin-party-add' | translate
-    }}</button>
+    <button mat-raised-button color="primary" routerLink="/political-party/add">
+      {{ 'admin-party-add' | translate }}
+    </button>
   </div>
 </section>
