--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -16,8 +16,7 @@
         *ngFor="let tag of tags"
         (removed)="removeTag(tag)"
         [editable]="true"
-        (edited)="editTag(tag, $event)"
-      >
+        (edited)="editTag(tag, $event)">
         {{ tag }}
         <button matChipRemove [attr.aria-label]="'remove ' + tag">
           <mat-icon>cancel</mat-icon>
@@ -28,8 +27,7 @@
         [matChipInputFor]="chipGrid"
         [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
         [matChipInputAddOnBlur]="addOnBlur"
-        (matChipInputTokenEnd)="addTag($event)"
-      />
+        (matChipInputTokenEnd)="addTag($event)" />
     </mat-chip-grid>
     <mat-hint>{{ 'chips-hint' | translate }}</mat-hint>
     <mat-error>{{ 'chips-required' | translate }}</mat-error>
@@ -38,8 +36,7 @@
     <h2 class="span-12">{{ 'politician-add' | translate }}</h2>
     <ng-container
       *ngFor="let politicianForm of politiciansFormArray?.controls; let i = index"
-      [formGroupName]="i"
-    >
+      [formGroupName]="i">
       <h3 class="span-12 politician-number">{{ i + 1 + '.' + ' Politician' | translate }}</h3>
       <mat-form-field class="span-6" appearance="outline">
         <mat-label>{{ 'politician-name' | translate }}</mat-label>
