--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="politician">
   <mat-card appearance="outlined" class="politician-card mat-elevation-z2">
     <app-admin-quick-menu-actions
-      (actionClickEvt)="handleActionEvent($event)"
-    ></app-admin-quick-menu-actions>
+      (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
     <mat-card-header>
       <mat-card-title>{{ politician.fullname }}</mat-card-title>
       <mat-card-subtitle>{{ politician.birthDate | dateFormatter }}</mat-card-subtitle>
@@ -14,24 +13,21 @@
           class="mat-elevation-z4"
           src="assets/icons/facebook.svg"
           aria-label="redirect to facebook profile of politic"
-          alt="redirect to facebook profile of politic"
-        />
+          alt="redirect to facebook profile of politic" />
       </a>
       <a *ngIf="politician.instagramUrl" [href]="politician.instagramUrl" target="_blank">
         <img
           class="mat-elevation-z4"
           src="assets/icons/instagram.svg"
           aria-label="redirect to instagram profile of politic"
-          alt="redirect to instagram profile of politic"
-        />
+          alt="redirect to instagram profile of politic" />
       </a>
       <a *ngIf="politician.twitterUrl" [href]="politician.twitterUrl" target="_blank">
         <img
           class="mat-elevation-z4"
           src="assets/icons/twitter.svg"
           aria-label="redirect to twitter profile of politic"
-          alt="redirect to twitter profile of politic"
-        />
+          alt="redirect to twitter profile of politic" />
       </a>
     </mat-card-content>
   </mat-card>
